Fix mixup of player indices on traversing the tree, first working solution